[gd_scene load_steps=2 format=3 uid="uid://dm6inwxhc10k8"]

[ext_resource type="Script" path="res://ui/options_menu.gd" id="1_oy0y2"]

[node name="OptionsMenu" type="Panel"]
process_mode = 3
custom_minimum_size = Vector2(1280, 768)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -384.0
offset_right = 640.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 384)
script = ExtResource("1_oy0y2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "Options"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelPhysics" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Physics"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonPhysicsLow" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Low"

[node name="ButtonPhysicsHigh" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "High"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonClose" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Close"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonPhysicsLow" to="." method="_on_button_physics_low_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonPhysicsHigh" to="." method="_on_button_physics_high_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonClose" to="." method="_on_button_close_pressed"]
